# cpp_example_project

./: .clang-format.changes  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  simple_calculator.cpp
include/cpp_example_lib/: operations.h  types.h
src/: operations.cpp
